# images

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  Image.hpp  Pixel.cpp  Pixel.hpp  main.cpp
src/algorithms/: Algorithm.cpp  Algorithm.hpp  Masking.cpp  Masking.hpp  Negative.cpp  Negative.hpp  Shading.cpp  Shading.hpp
src/data/: binary.ppm
src/images/: Image.cpp  Image.hpp  ImagePpm.cpp  ImagePpm.hpp
src/images/utils/: Pixel.cpp  Pixel.hpp  RawPixel.cpp  RawPixel.hpp
src/openers/: ImageOpener.cpp  ImageOpener.hpp  OpenerFactory.cpp  OpenerFactory.hpp  PpmOpener.cpp  PpmOpener.hpp
src/utils/: CommonTypes.hpp  Utils.hpp
tests/: CMakeLists.txt
tests/algorithms/: MaskingTests.cpp
tests/images/: ImageTests.cpp
tests/utils/: UtilsTests.cpp
